

add_library(arch-mcxn947-core0 OBJECT EXCLUDE_FROM_ALL)

target_compile_definitions(arch-mcxn947-core0 PUBLIC -D__FPU_PRESENT  -D__STARTUP_CLEAR_BSS -DCPU_MCXN947VDF_cm33_core0)
target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/CMSIS/Core/Include/")
target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/MCXN947/")
target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/")
target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/MCXN947/periph/")
target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/romapi/nboot/")
target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/romapi/mem_interface/")
target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/romapi/flash/")
target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/romapi/nboot/")
target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/romapi/runbootloader/")
#target_include_directories(arch-mcxn947-core0 PUBLIC "${CMAKE_CURRENT_LIST_DIR}/MCXN947/cmsis_drivers/")

target_sources(arch-mcxn947-core0 PRIVATE
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/gcc/startup_MCXN947_cm33_core0.S"
    #"${CMAKE_CURRENT_LIST_DIR}/MCXN947/system_MCXN947_cm33_core1.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/system_MCXN947_cm33_core0.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/romapi/mem_interface/src/fsl_mem_interface.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/romapi/nboot/src/fsl_nboot.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/romapi/flash/src/fsl_flash.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/romapi/runbootloader/src/fsl_runbootloader.c"
    #"${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_powerquad_cmsis.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexio_spi.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_gpio.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpi2c_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_itrc.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_powerquad_transform.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_dac.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_clock.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpspi.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_cdog.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_powerquad_math.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_wuu.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_enet.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_spc.c"
    #"${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpi2c_freertos.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_evtg.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpcmp.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_cmc.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_intm.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_common.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_pwm.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_pdm_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_erm.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_dac14.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexio_uart.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpadc.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpspi_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexio_uart_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_puf_v3.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_reset.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_powerquad_matrix.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexio_i2c_master.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_sai_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_ctimer.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_cache.c"
    #"${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpspi_freertos.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_smartcard_phy_emvsim.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpuart.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpi2c.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_usdhc.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_irtc.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_vref.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_i3c.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_powerquad_filter.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_pint.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_tsi_v6.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_powerquad_data.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_eim.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_sctimer.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_ostimer.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lptmr.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_powerquad_basic.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexio_spi_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_crc.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexio.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_inputmux.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexio_mculcd_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_tdet.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexcan.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_syspm.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_gdet.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpflexcomm.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexspi.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_mrt.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_wwdt.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpuart_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_opamp.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexio_mculcd.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_plu.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_smartcard_emvsim.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_freqme.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_common_arm.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_sai.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_vbat.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_pdm.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_utick.c"
    #"${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_lpuart_freertos.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_flexspi_edma.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_edma_soc.c"
    "${CMAKE_CURRENT_LIST_DIR}/MCXN947/drivers/fsl_ewm.c"
    # "${CMAKE_CURRENT_LIST_DIR}/MCXN947/cmsis_drivers/fsl_lpi2c_cmsis.c"
    # "${CMAKE_CURRENT_LIST_DIR}/MCXN947/cmsis_drivers/fsl_lpspi_cmsis.c"
    # "${CMAKE_CURRENT_LIST_DIR}/MCXN947/cmsis_drivers/fsl_lpuart_cmsis.c"
)