set(STM32F0XX_INCLUDE_DIRS  
    "${CMAKE_CURRENT_LIST_DIR}/../CMSIS/Include"
    "${CMAKE_CURRENT_LIST_DIR}/Device/ST/STM32F0xx/Include"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Inc"
)

set(STM32F0XX_LL_SOURCES
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_crc.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_utils.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_comp.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_i2c.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_rtc.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_adc.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_usb.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_spi.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_exti.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_dac.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_rcc.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_crs.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_tim.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_pwr.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_gpio.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_dma.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_ll_usart.c"
)

set(STM32F0XX_HAL_SOURCES
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_smartcard.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_usart.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_dma.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_dac_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_cortex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_comp.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rtc_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_gpio.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_iwdg.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_spi.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_wwdg.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_smbus.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_usart_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tsc.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pcd.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_dac.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_uart_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pcd_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rtc.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2s.c"
    #"${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_timebase_rtc_wakeup_template.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_smartcard_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_cec.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_can.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c_ex.c"
    #"${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_timebase_tim_template.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_adc.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_crc_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_irda.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_uart.c"
    #"${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_timebase_rtc_alarm_template.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_spi_ex.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash.c"
    #"${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_msp_template.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_exti.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_crc.c"
    "${CMAKE_CURRENT_LIST_DIR}/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_adc_ex.c"
)

add_library(arch-stm32f030x8 OBJECT EXCLUDE_FROM_ALL)
target_compile_definitions(arch-stm32f030x8 PUBLIC -DUSE_FULL_LL_DRIVER -DUSE_HAL_DRIVER -DSTM32F030x8 )
target_include_directories(arch-stm32f030x8 PUBLIC "${STM32F0XX_INCLUDE_DIRS}")
target_sources(arch-stm32f030x8 PRIVATE
    "${CMAKE_CURRENT_LIST_DIR}/Device/ST/STM32F0xx/Source/Templates/gcc/startup_stm32f030x8.s"
    ${STM32F0XX_LL_SOURCES}
    ${STM32F0XX_HAL_SOURCES}
)
